# face_processing

./: .gitignore  Makefile  face_video_preprocessing_spec.md  pyproject.toml  requirements-docker.txt
batch/: config.py  export_faceclip_batch.py  gdrive_processor.py  local_processor.py
batch/launchers/: hdtf_gdrive.py  talkvid_gdrive.py  talkvid_local.py
call_video_preparation/: README.md  __init__.py  __main__.py  config.py  cut.py  prepare.py  restore.py
configs/: call_video_preparation.yaml  common.yaml  gdrive.yaml  gdrive_container_cpu.yaml  gdrive_local_mps.yaml  hdtf_gdrive.yaml  talkvid_gdrive.yaml  talkvid_local_batches.yaml
dataset_processing/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
docker/: Dockerfile.call_video_preparation  Dockerfile.cpu  Dockerfile.dataset_processing_cpu  Dockerfile.framedata  run_gdrive_cpu.sh
docs/: dataset_processing_remote_docker.md
face_framedata/: README.md  __main__.py  cli.py  cut.py  pipeline.py  prepare.py  restore.py
face_processing/: analysis_core.py  cli.py  config.py  crop_export.py  face_analysis.py  face_model_3d.py  frame_quality.py  geometry.py  logging_utils.py  models.py  normalize.py  pipeline.py  ranking.py  restore.py  segmentation.py
scripts/: sync_remote_code.sh
tests/: test_dataset_processing_geometry.py  test_framedata_pipeline.py
